// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Link should open an external link 1`] = `
<DocumentFragment>
  <a
    class="Link__AnchorStyled-sc-ec014t-0 hokOwV group ring-focus"
    data-ring-focus-margin="-m-1"
    data-testid="Link"
    href="#"
    rel="noopener noreferrer"
    to="https://payvo.com/"
  >
    <span
      class="Link__Content-sc-ec014t-1 hUiuRR"
    />
    <span
      class="align-middle"
    >
      <div
        class="sc-bdnxRM AFVmm flex-shrink-0 duration-200"
        data-testid="Link__external"
        height="16"
        width="16"
      >
        <svg>
          redirect.svg
        </svg>
      </div>
    </span>
  </a>
</DocumentFragment>
`;

exports[`Link should render 1`] = `
<DocumentFragment>
  <a
    class="Link__AnchorStyled-sc-ec014t-0 hokOwV group ring-focus"
    data-ring-focus-margin="-m-1"
    data-testid="Link"
    href="/test"
  >
    <span
      class="Link__Content-sc-ec014t-1 hUiuRR"
    >
      Test
    </span>
  </a>
</DocumentFragment>
`;

exports[`Link should render external without children 1`] = `
<DocumentFragment>
  <a
    class="Link__AnchorStyled-sc-ec014t-0 hokOwV group ring-focus"
    data-ring-focus-margin="-m-1"
    data-testid="Link"
    href="#"
    rel="noopener noreferrer"
    to="https://payvo.com"
  >
    <span
      class="Link__Content-sc-ec014t-1 hUiuRR"
    />
    <span
      class="align-middle"
    >
      <div
        class="sc-bdnxRM AFVmm flex-shrink-0 duration-200"
        data-testid="Link__external"
        height="16"
        width="16"
      >
        <svg>
          redirect.svg
        </svg>
      </div>
    </span>
  </a>
</DocumentFragment>
`;

exports[`Link should render with tooltip 1`] = `
<DocumentFragment>
  <a
    class="Link__AnchorStyled-sc-ec014t-0 hokOwV group ring-focus"
    data-ring-focus-margin="-m-1"
    data-testid="Link"
    href="/test"
  >
    <span
      class="Link__Content-sc-ec014t-1 hUiuRR"
    >
      Test
    </span>
  </a>
</DocumentFragment>
`;

exports[`Link should show a toast when trying to open an invalid external link 1`] = `
<DocumentFragment>
  <a
    class="Link__AnchorStyled-sc-ec014t-0 hokOwV group ring-focus"
    data-ring-focus-margin="-m-1"
    data-testid="Link"
    href="#"
    rel="noopener noreferrer"
    to="invalid-url"
  >
    <span
      class="Link__Content-sc-ec014t-1 hUiuRR"
    />
    <span
      class="align-middle"
    >
      <div
        class="sc-bdnxRM AFVmm flex-shrink-0 duration-200"
        data-testid="Link__external"
        height="16"
        width="16"
      >
        <svg>
          redirect.svg
        </svg>
      </div>
    </span>
  </a>
</DocumentFragment>
`;
